user study ready code

--- a/TabBuffer/popup.html
+++ b/TabBuffer/popup.html
@@ -1,23 +1,26 @@
 <!DOCTYPE html>
-<html style="width:500px">
+<html style="width:600px">
   <head>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   </head>
   <body style="position: relative; vertical-align:middle">
-  <div>
-    <h2> List of Recommended Tabs to delete</h2>
-    <ol id="inactiveList">
-    </ol>
+  <div class="list-title">
+    <h3> List of Recommended Tabs to delete</h3>
   </div>
+  <div style="text-align: center; padding: 3%">
+    <button id="closeAllButton">
+      Close All Inactive Tabs
+    </button>
+    <button id="reloadButton">
+      Reload
+    </button>
+  </div>
+  <ol id="inactiveList" class="list-group list-group-flush">
+  </ol>
   <br/>
-  <button id="closeAllButton">
-    Close All Inactive Tabs
-  </button>
-  <button id="reloadButton">
-    Reload
-  </button>
-  <div>
-    <h2> Tab Statistics</h2>
+<div style="text-align: center;">
+    <h3> Tab Statistics</h3>
     <p id="inactiveCount">
     </p>
     <p id="totalCount">
